@@ -70,7 +70,7 @@ body {
             }
         }
         td, th {
-            box-sizing: border-box; color: #colours[text]; padding: 0 0.5rem;
+            color: #colours[text]; padding: 0 0.5rem;
         }
         td:last-child, th:last-child {
             border-right: 0;
@@ -100,7 +100,7 @@ body {
             background: #colours[panel-bg];
             border-right: 1px solid; border-color: #colours[line-border];
             font-family: #fonts[system]; font-weight: normal;
-            white-space: nowrap;
+            position: relative; text-align: left; white-space: nowrap;
             .column-header {
                 display: inline-block;
             }
@@ -109,7 +109,11 @@ body {
             color: #colours[text]; cursor: pointer;
         }
         th a.filter-control {
-            color: #colours[control-text]; float: right; opacity: 50%;
+            color: #colours[control-text]; opacity: 50%;
+            position: absolute; right: 0;
+        }
+        th:has(a.filter-control) .column-header {
+            padding-right: 20px;
         }
         th.active-sort-column {
             background: #colours[active-column];
@@ -429,7 +433,7 @@ body {
         min-width: @dialog-title-min-width; padding: 0.25rem 0.5rem;
     }
     .filter-label {
-        display: inline-block; padding-left: 0.25rem;
+        display: inline-block; padding-right: 0.25rem;
         img, svg {
             height: 1rem; width: 1rem; vertical-align: text-bottom;
         }
@@ -546,8 +550,6 @@ body {
     }
 }
 .state-table.object-view {
-    box-shadow: 3px 3px 3px #colours[panel-shadow];
-    display: inline-block; text-align: left;
     td:first-child {
         border-right: 1px solid; font-family: #fonts[system]; font-size: 0.8rem;
         font-weight: normal; padding-right: 0.5rem; white-space: nowrap;
